# geant4_projects

./: .gitignore  trucosgeant.tex
AllNuclearProperties/: .#nuclearproperties.cc  CMakeLists.txt  GNUmakefile  nuclearproperties.cc
AllNuclearProperties/include/: CrossSection.hh  Material.hh  PhysicalPropertiesOfMaterials.hh
AllNuclearProperties/src/: PhysicalPropertiesOfMaterials.cc
MyComptonCamera/CC/: CMakeLists.txt  GNUmakefile  TheComptonCameraFCF.cc
MyComptonCamera/CC/include/: ActionInitialization.hh  BSDcrystalDigit.hh  BSDcrystalDigitizer.hh  BSDcrystalHit.hh  ControlVolDigit.hh  ControlVolDigitizer.hh  ControlVolHit.hh  CrosstalkGenerator.hh  EventAction.hh  Materials.hh  MeV2ChargeConverter.hh  NoiseGenerator.hh  PSDcrystalDigit.hh  PSDcrystalDigitizer.hh  PSDcrystalHit.hh  PhysVol_SegmentedCrystal_Box.hh  PhysicsList.hh  PhysicsListMessenger.hh  PrimaryGeneratorAction.hh  RootSaver.hh  RunAction.hh  RunActionMessenger.hh  SDBSDcrystal.hh  SDControlVol.hh  SDPSDcrystal.hh  SetupConstruction.hh  SetupMessenger.hh
MyComptonCamera/CC/include/Geometry/: LogVol_BSD_actual.hh  LogVol_BSD_new.hh  LogVol_CCHardCovering_Base.hh  LogVol_CCHardCovering_Lid.hh  LogVol_Collimator_ToPSD.hh  LogVol_Collimator_ToSample.hh  LogVol_ComptonCamera_DFproposal.hh  LogVol_ComptonCamera_actual.hh  LogVol_Crystal_Cyl.hh  LogVol_DynodesArray.hh  LogVol_GammaSourceCasing.hh  LogVol_PCBs_Box.hh  LogVol_PCBs_Cyl.hh  LogVol_PMTbase.hh  LogVol_PSD_actual.hh  LogVol_PSD_new.hh  LogVol_SegmentedCrystal_Box.hh  LogVol_ShieldingBSD_DFproposal.hh  LogVol_ShieldingPSDCone.hh
MyComptonCamera/CC/macros/: MAINmacro.mac  THEmacro.mac  init_vis.mac  vis.mac  visQt.mac
MyComptonCamera/CC/src/: ActionInitialization.cc  BSDcrystalDigit.cc  BSDcrystalDigitizer.cc  BSDcrystalHit.cc  ControlVolDigit.cc  ControlVolDigitizer.cc  ControlVolHit.cc  CrosstalkGenerator.cc  EventAction.cc  Materials.cc  MeV2ChargeConverter.cc  NoiseGenerator.cc  PSDcrystalDigit.cc  PSDcrystalDigitizer.cc  PSDcrystalHit.cc  PhysicsList.cc  PhysicsListMessenger.cc  PrimaryGeneratorAction.cc  RootSaver.cc  RunAction.cc  RunActionMessenger.cc  SDBSDcrystal.cc  SDControlVol.cc  SDPSDcrystal.cc  SetupConstruction.cc  SetupMessenger.cc
MyComptonCamera/CC/src/Geometry/: LogVol_BSD_actual.cc  LogVol_BSD_new.cc  LogVol_CCHardCovering_Base.cc  LogVol_CCHardCovering_Lid.cc  LogVol_Collimator_ToPSD.cc  LogVol_Collimator_ToSample.cc  LogVol_ComptonCamera_DFproposal.cc  LogVol_ComptonCamera_actual.cc  LogVol_Crystal_Cyl.cc  LogVol_DynodesArray.cc  LogVol_GammaSourceCasing.cc  LogVol_PCBs_Box.cc  LogVol_PCBs_Cyl.cc  LogVol_PMTbase.cc  LogVol_PSD_actual.cc  LogVol_PSD_new.cc  LogVol_SegmentedCrystal_Box.cc  LogVol_ShieldingBSD_DFproposal.cc  LogVol_ShieldingPSDCone.cc  PhysVol_SegmentedCrystal_Box.cc
backscattered/: CMakeLists.txt  GNUmakefile  backscattered.cc
backscattered/include/: MyAnalysisManager.hh  RootImprove.hh
backscattered/src/: CrossSection.cc  Material.cc  MyAnalysisManager.cc  RootImprove.cc
crossection/: CMakeLists.txt  GNUmakefile  crossection.cc
crossection/include/: MyAnalysisManager.hh
crossection/src/: MyAnalysisManager.cc
easiest_simulation/B1/: exampleB1.cc
easiest_simulation/B1/include/: B1DetectorConstruction.hh  B1EventAction.hh  B1PrimaryGeneratorAction.hh  B1RunAction.hh  B1SteppingAction.hh
easiest_simulation/B1/src/: B1ActionInitialization.cc  B1DetectorConstruction.cc  B1EventAction.cc  B1PrimaryGeneratorAction.cc  B1Run.cc  B1RunAction.cc  B1SteppingAction.cc
easiest_simulation/macros/B1/: run2.mac
easiest_simulation/macros/mios/: run.mac  vis.mac
gfnun_detectors/: Doxyfile  GFNUNdetectors.cc  README.cmake  long_run.sh
gfnun_detectors/include/: EventAction.hh  MyHit.hh  OpticalPhysics.hh  PhysListHadron.hh  PrimaryGeneratorAction.hh  RunActionMessenger.hh  SteppingAction.hh
gfnun_detectors/macros/: Cf252NeutronVertex.txt  MAINmacro.mac  THEmacro.mac  vis.mac
gfnun_detectors/src/: Construct_log_vol_detectorGFNUN.cc  DetectorConstruction.cc  Interactions.cc  Materials.cc  MeV2ChargeConverter.cc  MyDigi.cc  MyHit.cc  PhysicsList.cc  PhysicsListMessenger.cc  RunActionMessenger.cc  SteppingAction.cc
gfnun_gammas/gfnun_detectors/: CMakeLists.txt  GNUmakefile
gfnun_gammas/gfnun_detectors/analysis/: Makefile  PICO_tree_cal.C  PICO_tree_cal.h  main.cxx
gfnun_gammas/gfnun_detectors/include/: Construct_log_vol_detectorGFNUN.hh  (+16 more)
gfnun_neutron/: CMakeLists.txt  GNUmakefile  Neutrons_GFNUN.cc  README
gfnun_neutron/include/: DMXMinEkineCuts.hh  DetectorMessenger.hh  HitDLM2.hh  MyHit.hh  MySensitiveDetector.hh  SensitiveDLM2.hh  SteppingVerbose.hh  WriteToEntuple.hh  bsneutronDetectorConstruction.hh  bsneutronEventAction.hh  bsneutronPhysicsList.hh  bsneutronPrimaryGeneratorAction.hh  bsneutronRun.hh  bsneutronRunAction.hh
gfnun_neutron/macros/: GPS.mac  GPS0.mac  vis.mac
gfnun_neutron/src/: DetectorMessenger.cc  HitDLM2.cc  MyHit.cc  MySensitiveDetector.cc  SensitiveDLM2.cc  SteppingVerbose.cc  WriteToEntuple.cc  bsneutronDetectorConstruction.cc  bsneutronEventAction.cc  bsneutronPhysicsList.cc  bsneutronPrimaryGeneratorAction.cc  bsneutronRun.cc  bsneutronRunAction.cc
growing_simulation/B1/: CMakeLists.txt  exampleB1.cc
growing_simulation/B1/include/: AndresPhysicsList.hh  B1ActionInitialization.hh  B1EventAction.hh  B1PhysicsList.hh  B1PrimaryGeneratorAction.hh  B1RunAction.hh
growing_simulation/B1/src/: AndresPhysicsList.cc  B1ActionInitialization.cc  B1DetectorConstruction.cc  B1EventAction.cc  B1PhysicsList.cc  B1PrimaryGeneratorAction.cc  B1RunAction.cc
growing_simulation_last_release/Sim1/: CMakeLists.txt  Makefile  cmake_install.cmake  sim1.cc  vis.mac  visQt.mac
growing_simulation_last_release/Sim1Paralel/: CMakeLists.txt  Doxyfile  andres.mac  cmake_install.cmake
growing_simulation_last_release/Sim1ParalelMyManager/: GNUmakefile  Makefile  andres.mac  sim1.cc
meanfreepath/: CMakeLists.txt  GNUmakefile  mfp.cc
meanfreepath/include/: CrossSection.hh  Material.hh  MyAnalysisManager.hh
meanfreepath/src/: CrossSection.cc  Material.cc  MyAnalysisManager.cc
(+49 files in other folders)
